--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
       env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       run: |
-        scp -P ${{ secrets.VPS_SSH_PORT }} -o StrictHostKeyChecking=no -r build root@${{ secrets.VPS_IP_ADDRESS }}:/var/www/time-table.pp.ua/html
+        scp -P ${{ secrets.VPS_SSH_PORT }} -o StrictHostKeyChecking=no -r build/* root@${{ secrets.VPS_IP_ADDRESS }}:/var/www/time-table.pp.ua/html
         ssh -o StrictHostKeyChecking=no root@${{ secrets.VPS_IP_ADDRESS }} -p ${{ secrets.VPS_SSH_PORT }} << 'ENDSSH'
           systemctl restart nginx
         ENDSSH
