--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ name: Node.js CI
 on:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
 
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout master
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Setup Node version
       uses: actions/setup-node@v3
       with:
